# pretix-mollie

./: .gitlab-ci.yml  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
pretix_mollie/: __init__.py  apps.py  forms.py  payment.py  signals.py  tasks.py  urls.py  utils.py  views.py
pretix_mollie/locale/: django.pot
pretix_mollie/locale/af/LC_MESSAGES/: django.po
pretix_mollie/locale/ar/LC_MESSAGES/: django.po
pretix_mollie/locale/ca/LC_MESSAGES/: django.po
pretix_mollie/locale/da/LC_MESSAGES/: django.po
pretix_mollie/locale/de/LC_MESSAGES/: django.po
pretix_mollie/locale/de_Informal/LC_MESSAGES/: django.po
pretix_mollie/locale/el/LC_MESSAGES/: django.po
pretix_mollie/locale/fi/LC_MESSAGES/: django.po
pretix_mollie/locale/fo/LC_MESSAGES/: django.po
pretix_mollie/locale/fr/LC_MESSAGES/: django.po
pretix_mollie/locale/hr/LC_MESSAGES/: django.po
pretix_mollie/locale/ja/LC_MESSAGES/: django.po
pretix_mollie/locale/lb/LC_MESSAGES/: django.po
pretix_mollie/locale/lv/LC_MESSAGES/: django.po
pretix_mollie/locale/nb_NO/LC_MESSAGES/: django.po
pretix_mollie/locale/nl/LC_MESSAGES/: django.po
pretix_mollie/locale/nl_BE/LC_MESSAGES/: django.po
pretix_mollie/locale/nl_Informal/LC_MESSAGES/: django.po
pretix_mollie/migrations/: 0001_initial.py
pretix_mollie/templates/pretix_mollie/: checkout_payment_confirm.html  checkout_payment_form.html  checkout_payment_form_banktransfer.html  checkout_payment_form_order.html  mail_info_disabled.txt  order_pending.txt  organizer_settings.html  pending.html
(+11 files in other folders)
